<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/option_edit"
        android:title="Edit"
        android:icon="@drawable/profile_edit"
        />

    <item
        android:id="@+id/option_save"
        android:title="Save"
        android:icon="@drawable/profile_save"
        />

</menu>