...
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientHomeMenuActivity04"
    android:id="@+id/PatientHomeDrawerLayout"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
                android:text="@string/Patient_Home_Title"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/profile_edit_icon"
                android:visibility="invisible"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:background="@drawable/profile_edit_button"
                />
...
