<resources>

    <string name="Button_Ok">Ok</string>
    <string name="Button_Cancel">Cancel</string>
    <string name="Button_Back">Back</string>

    <!-- Patient Home Main Menu -->
    <string name="Click_Website">www.haystreethealthyhub.com</string>
    <string name="Patient_Main_Menu_Open">Open Menu</string>
    <string name="Patient_Main_Menu_Close">Close Menu</string>
    <string name="Patient_Home_Title">My Health</string>
...
