<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@drawable/bg_03"

    >
    <!-- Bottom buttons -->
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="#40FFFFFF"

        >

        <Button
            android:id="@+id/Registration_ButtonOk"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/Button_RegistrationOk"
            android:background="@drawable/custom_button"
            android:layout_marginRight="20dp"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/Registration_ButtonCancel"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/Button_RegistrationCancel"
            android:background="@drawable/custom_button"
            android:textSize="20dp"
            />

    </LinearLayout>

    <!-- Patient personal info layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons"
        >
        <include layout="@layout/patient_personal_info" />

    </LinearLayout>


</RelativeLayout>